testsuite/tests/codeGen/should_fail/T13233.stderr

T13233.hs:14:11: error:
    Cannot use function with representation-polymorphic arguments:
      (#,#) :: a -> a -> (# a, a #)
    (Note that representation-polymorphic primops,
    such as 'coerce' and unboxed tuples, are eta-expanded
    internally because they must occur fully saturated.
    Use -fprint-typechecker-elaboration to display the full expression.)
    Representation-polymorphic arguments:
      a :: TYPE rep
      a :: TYPE rep

T13233.hs:22:16: error:
    Cannot use function with representation-polymorphic arguments:
      (#,#) :: a -> b -> (# a, b #)
    (Note that representation-polymorphic primops,
    such as 'coerce' and unboxed tuples, are eta-expanded
    internally because they must occur fully saturated.
    Use -fprint-typechecker-elaboration to display the full expression.)
    Representation-polymorphic arguments:
      a :: TYPE rep1
      b :: TYPE rep2
